auth required, translate glassdoor titles
